--- a/css/ds_agenda.css
+++ b/css/ds_agenda.css
@@ -1,21 +1,23 @@
 @charset "UTF-8";
 .agenda_header {
-	background-color: #B8C0D1;
+	background-color: #772432;
+	color: white;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 h1 {
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
 	font-weight: 700;
-	font-size: 4em;
+	font-size: 3.5em;
 }
 .sidebar {
 	background-color: #B8C0D1;
 	border-right: thin solid #000000;
 	padding-right: 0px;
 }
-h3 {
-	font-size: 1em;
-	font-style: italic;
-	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif;
+
+#tm-logo {
+
 }
 .superscript {
     position: relative;
@@ -23,7 +25,7 @@ h3 {
     font-size: 0.8em;
 }
 .main {
-	background-color: #B8C0D1;
+/*	background-color: #B8C0D1;*/
 }
 .container .row .col-sm-6.date {
 	height: 100%;
@@ -38,4 +40,40 @@ footer {
 }
 .officer-name {
 	margin-bottom: 12px;
+}
+#date {
+	text-align: right;
+	font-size: 1.5em;
+}
+
+
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
+
+#location {
+	text-align: right;
+	font-size: 1em;
+	font-style: italic;
+	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif;
+}
+
+@media (max-width: 767px) {
+    .row.vertical-align {
+        display: block; /* Turn off the flexible box layout */
+    }
+	
+	#date {
+		text-align: left;
+	}
+	
+	#location {
+		text-align: left;
+	}
+	
+	h1 {
+		font-size: 2em;
+	}
 }
