Added some more club info to the sidebar. Fixed some incorrectly terminated elements. Added a little footer styling.

--- a/public/css/agenda.css
+++ b/public/css/agenda.css
@@ -72,6 +72,13 @@ footer {
 	padding-top: .5em;
 }
 
+footer {
+	padding-top: 10px;
+	border: 0px;
+	border-top: 0.5px;
+	border-style: solid;
+	border-color: black;
+}
 
 @media (max-width: 767px) {
     .row.vertical-align {
