Woot! The app now grabs a definition for the wotd and inserts it into the agenda. There's a lot of parsing needed to be done on the list of definitions, but at least there's something to work with now.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -19,9 +19,12 @@
         <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
         <article class="col-sm-9 main col-sm-push-3">
             <h4>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></h4>
-            <section id="wotd-definition">
+            <section id="wotd">
                 <!-- This could eventually be replaced by a definition pulled from the internet -->
-                <h5>[too-MUHL-choo-uh s, tyoo-]</h5>
+                <h5 id="wotd-pronunciation">[too-MUHL-choo-uh s, tyoo-]</h5>
+                <div id="wotd-definition">
+                    {{wotd-definition}}
+                </div>
                 <ol>
                     <li><i>adj.</i> full of tumult or riotousness; marked by disturbance and uproar</li>
                     <li><i>adj.</i> raising a great clatter and commotion; disorderly or noisy</li>
