--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -18,18 +18,22 @@
     <div class="row">
         <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
         <article class="col-sm-9 main col-sm-push-3">
-            <h4>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></h4>
+            <h4>Word of the day: <a href="http://www.dictionary.com/browse/ace" target="_blank">tumultuous</a></h4>
             <section id="wotd">
                 <!-- This could eventually be replaced by a definition pulled from the internet -->
                 <h5 id="wotd-pronunciation">[too-MUHL-choo-uh s, tyoo-]</h5>
                 <div id="wotd-definition">
-                    {{wotd-definition}}
+                    {{#each wotd-definition.lexicalEntries}}
+                        <p><i>{{lexicalCategory}}</i></p>
+                        {{#each entries}}
+                            {{#each senses}}
+                                {{#each definitions}}
+                                    {{this}}
+                                {{/each}}
+                            {{/each}}
+                        {{/each}}
+                    {{/each}}
                 </div>
-                <ol>
-                    <li><i>adj.</i> full of tumult or riotousness; marked by disturbance and uproar</li>
-                    <li><i>adj.</i> raising a great clatter and commotion; disorderly or noisy</li>
-                    <li><i>adj.</i> highly agitated, as the mind or emotions; distraught; turbulent</li>
-                </ol>
             </section>
             <section id="programme" class="row">
                 <div class="col-xs-8 agenda-item">Attendee Arrivals</div>
