Definitions weren't being wrapped in <p> tags so they ran into each other. Fixed.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -28,7 +28,7 @@
                         {{#each entries}}
                             {{#each senses}}
                                 {{#each definitions}}
-                                    {{this}}
+                                    <p>{{this}}</p>
                                 {{/each}}
                             {{/each}}
                         {{/each}}
