Trying to get helpers to work. Not there yet.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -18,7 +18,9 @@
     <div class="row">
         <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
         <article class="col-sm-9 main col-sm-push-3">
-            <h4>Word of the day: <a href="http://www.dictionary.com/browse/ace" target="_blank">tumultuous</a></h4>
+            
+
+            <h4>Word of the day: {{wotd-definition.word}}</h4>
             <section id="wotd">
                 <!-- This could eventually be replaced by a definition pulled from the internet -->
                 <h5 id="wotd-pronunciation">[too-MUHL-choo-uh s, tyoo-]</h5>
