Preparing to pull in meeting data. Going to try a quick experiment with fieldbook.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -7,7 +7,7 @@
         <div class="col-sm-3 col-xs-12">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2 id="date">17 April, 2017</h2>
+                    <h2 id="date">{{meeting-date}}</h2>
                 </div>
                 <div class="col-xs-12">
                     <h3 id="location">3<span class="superscript">rd</span> Tonal Center</h3>
