--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -7,7 +7,7 @@
         <div class="col-sm-3 col-xs-12">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2 id="date">{{meeting-date}}</h2>
+                    <h2 id="date">{{meeting.date}}</h2>
                 </div>
                 <div class="col-xs-12">
                     <h3 id="location">3<span class="superscript">rd</span> Tonal Center</h3>
@@ -39,13 +39,13 @@
                 <div class="col-xs-8 agenda-item">Role Introductions</div>
                 <div class="col-xs-4 agenda-time">12:06 – 12:10 pm</div>
                 <div class="col-xs-8 agenda-role">Toastmaster</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Josh Lando</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.toastmaster.0.name}}</a></div>
                 <div class="col-xs-8 agenda-role">Timer</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Gary Halpin</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.timer.0.name}}</a></div>
                 <div class="col-xs-8 agenda-role">Ah-counter</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Annie Yoshiyama</a></div>
                 <div class="col-xs-8 agenda-role">General Evaluator</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Candace Flemmer</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.general_evaluator.0.name}}</a></div>
                 <div class="col-xs-8 agenda-item">Prepared Speeches</div>
                 <div class="col-xs-4 agenda-time">12:11 – 12:30 pm</div>
                 <div class="col-xs-8 agenda-speech-title">'4th Wave VR, it's about to get real'</div>
@@ -57,7 +57,7 @@
                 <div class="col-xs-8 agenda-item">Table Topics</div>
                 <div class="col-xs-4 agenda-time">12:30 – 12:42 pm</div>
                 <div class="col-xs-8 agenda-speech-title">'Days of Future Passed'</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Ray Meluch</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.topicsmaster.0.name}}</a></div>
                 <div class="col-xs-8 agenda-item">Responses, 1 – 2 mins</div>
                 <div class="col-xs-4 agenda-name">Members</div>
                 <div class="col-xs-8 agenda-item">Evaluations</div>
