--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -39,7 +39,7 @@
                 <div class="col-xs-8 agenda-item">Role Introductions</div>
                 <div class="col-xs-4 agenda-time">12:06 – 12:10 pm</div>
                 <div class="col-xs-8 agenda-role">Toastmaster</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.toastmaster.0.name}}</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{toastmaster}}</a></div>
                 <div class="col-xs-8 agenda-role">Timer</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.timer.0.name}}</a></div>
                 <div class="col-xs-8 agenda-role">Ah-counter</div>
