Starting to pull in the speech information. This will require some more fetching from other tables.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -53,9 +53,9 @@
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{ge}}</a></div>
                 <div class="col-xs-8 agenda-item">Prepared Speeches</div>
                 <div class="col-xs-4 agenda-time">12:11 – 12:30 pm</div>
-                <div class="col-xs-8 agenda-speech-title">'4th Wave VR, it's about to get real'</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">John Gilbert</a></div>
-                <div class="col-xs-8 agenda-speech-project">CC 10: Inspire Your Audience, 8 – 10 mins</div>
+                <div class="col-xs-8 agenda-speech-title">{{speech-title-1}}</div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{speaker-1}}</a></div>
+                <div class="col-xs-8 agenda-speech-project">{{project-1}}, {{time-1}}</div>
                 <div class="col-xs-8 agenda-speech-title">'Bore da'</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Marcus Altman</a></div>
                 <div class="col-xs-8 agenda-speech-project">CC 1: The Ice Breaker, 4 – 6 mins</div>
