--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -68,7 +68,7 @@
                 <div class="col-xs-8 agenda-item">Evaluations</div>
                 <div class="col-xs-4 agenda-time">12:42 – 12:55 pm</div>
                 <div class="col-xs-8 agenda-role">Speech 1 Evaluation, 2 – 3 mins</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Andrew Wilson</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator-1}}</a></div>
                 <div class="col-xs-8 agenda-role">Speech 2 Evaluation, 2 – 3 mins</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Mike Assenti</a></div>
                 <div class="col-xs-8 agenda-role">Timer's Report, 1 – 2 mins</div>
