Lots of DRY but two speeches pulled in now.

--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -56,9 +56,9 @@
                 <div class="col-xs-8 agenda-speech-title">{{speech-title-1}}</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{speaker-1}}</a></div>
                 <div class="col-xs-8 agenda-speech-project">{{project-1}}, {{time-1}}</div>
-                <div class="col-xs-8 agenda-speech-title">'Bore da'</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Marcus Altman</a></div>
-                <div class="col-xs-8 agenda-speech-project">CC 1: The Ice Breaker, 4 – 6 mins</div>
+                <div class="col-xs-8 agenda-speech-title">{{speech-title-2}}</div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{speaker-2}}</a></div>
+                <div class="col-xs-8 agenda-speech-project">{{project-2}}, {{time-2}}</div>
                 <div class="col-xs-8 agenda-item">Table Topics</div>
                 <div class="col-xs-4 agenda-time">12:30 – 12:42 pm</div>
                 <div class="col-xs-8 agenda-speech-title">'Days of Future Passed'</div>
@@ -70,7 +70,7 @@
                 <div class="col-xs-8 agenda-role">Speech 1 Evaluation, 2 – 3 mins</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator-1}}</a></div>
                 <div class="col-xs-8 agenda-role">Speech 2 Evaluation, 2 – 3 mins</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Mike Assenti</a></div>
+                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator-2}}</a></div>
                 <div class="col-xs-8 agenda-role">Timer's Report, 1 – 2 mins</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{timer}}</a></div>
                 <div class="col-xs-8 agenda-role">Ah-counter Report, 1 – 2 mins</div>
