--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -60,13 +60,6 @@
                     <div class="col-xs-8 agenda-speech-project">{{project}}, {{time}}</div>
                 {{/each}}
 
-                {{!--<div class="col-xs-8 agenda-speech-title">{{speech-title-1}}</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{speaker-1}}</a></div>
-                <div class="col-xs-8 agenda-speech-project">{{project-1}}, {{time-1}}</div>
-                <div class="col-xs-8 agenda-speech-title">{{speech-title-2}}</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{speaker-2}}</a></div>
-                <div class="col-xs-8 agenda-speech-project">{{project-2}}, {{time-2}}</div>--}}
-
                 <div class="col-xs-8 agenda-item">Table Topics</div>
                 <div class="col-xs-4 agenda-time">12:30 – 12:42 pm</div>
                 <div class="col-xs-8 agenda-speech-title">'Days of Future Passed'</div>
@@ -75,10 +68,11 @@
                 <div class="col-xs-4 agenda-name">Members</div>
                 <div class="col-xs-8 agenda-item">Evaluations</div>
                 <div class="col-xs-4 agenda-time">12:42 – 12:55 pm</div>
-                <div class="col-xs-8 agenda-role">Speech 1 Evaluation, 2 – 3 mins</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator-1}}</a></div>
-                <div class="col-xs-8 agenda-role">Speech 2 Evaluation, 2 – 3 mins</div>
-                <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator-2}}</a></div>
+                {{#each meeting.speeches}}
+                    <div class="col-xs-8 agenda-role">Speech {{inc @index}} Evaluation, 2–3 mins</div>
+                    <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{evaluator}}</a></div>
+                {{/each}}
+                         
                 <div class="col-xs-8 agenda-role">Timer's Report, 1 – 2 mins</div>
                 <div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">{{meeting.timer}}</a></div>
                 <div class="col-xs-8 agenda-role">Ah-counter Report, 1 – 2 mins</div>
