--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -104,7 +104,7 @@
                         <dd class="officer-name"><a href="mailto:jbl@test.com">Josh Lando, CC, CL</a> </dd>
                         <dt class="officer-role">Treasurer</dt>
                         <dd class="officer-name"><a href="mailto:cflem@test.com">Candace Flemmer</a> </dd>
-                        <dt class="officer-role">Sargeant-at-Arms</dt>
+                        <dt class="officer-role">Sergeant-at-Arms</dt>
                         <dd class="officer-name"><a href="mailto:rwm@test.com">Ray Meluch</a> </dd>
                         <dt class="officer-role">Immediate Past President</dt>
                         <dd class="officer-name"><a href="mailto:cseli@test.com">Chris Seline, CC</a> </dd>
