--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,10 +22,11 @@
 <body>
   {{{body}}}
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  {{!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>--}}
 
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  {{!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>--}}
+  <script src="dist/bundle.js"></script>
 </body>
 
 </html>
